--- a/src/components/chart/chart.scss
+++ b/src/components/chart/chart.scss
@@ -1,4 +1,5 @@
 .chart-container{
+    height: 350px;
     flex: 3;
     padding: 10px 12px;
     box-shadow: 1px 1px 3px -1px rgba(99,95,99,1);
@@ -23,6 +24,9 @@
     justify-content: space-between;
     align-items: center;
     color: gray;
+    svg{
+        cursor: pointer;
+    }
     h5{
         font-size: 15px;
    
